<resources>
    <string name="app_name">Dashboard UI</string>
    <string name="today">Today</string>
    <string name="exercises">Exercises</string>
    <string name="settings">Settings</string>
    <string name="good_morning_hoang">Good Morning Hoang</string>
    <string name="search">Search</string>
    <string name="diet_chart">Diet Chart</string>
    <string name="exercise">Exercise</string>
    <string name="meditation">Meditation</string>
    <string name="yoga">Yoga</string>
</resources>